# evora-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: backend.yml
app/: main.py
app/api/: health.py
app/core/: config.py
app/db/migrations/: env.py
tests/: test_health.py
